@@ -82,6 +82,9 @@ extern void VideoDisplayWakeup(void);
     /// Set video device.
 extern void VideoSetDevice(const char *);
 
+    /// Get video driver name.
+extern const char *VideoGetDriverName(void);
+
     /// Set video geometry.
 extern int VideoSetGeometry(const char *);
 
